# whisper.cpp

./: .gitignore
.devops/: main-vulkan-linux.Dockerfile
.github/workflows/: build-with-vulkan-windows.yml  build-with-vulkan.yml
examples/: CMakeLists.txt
examples/server/: server.cpp  start-server.bat
examples/server/public/: basic_media_info.html  convert.html  index.html
examples/server/public/js/: ffmpeg.helper.js  task.helper.js
examples/stream/: stream.cpp
examples/websocket-stream/: CMakeLists.txt  index.html  whisper-server.cpp
ggml/src/: ggml-backend-reg.cpp
